<resources>
    <string name="app_name">Stock Manager</string>
    <string name="lbl_product_name">Name</string>
    <string name="lbl_product_description">Description</string>
    <string name="lbl_product_stock">Stock</string>
    <string name="lbl_product_minStock">Min Stock</string>
    <string name="lbl_product_unitPrice">Unit Price</string>
    <string name="lbl_menu_edit">Edit</string>
    <string name="lbl_menu_delete">Delete</string>
    <string name="msg_requiredField">Required Field</string>
    <string name="msg_confirmation">Confirmation</string>
    <string name="msg_confirmation_delete_product">Really want to delete this product?</string>
    <string name="msg_deleting_product">Deleting a product…</string>
    <string name="msg_updating_product_list">Updating a product list…</string>
    <string name="msg_yes">Yes</string>
    <string name="msg_no">No</string>
    <string name="lbl_list_item_product_code">Code : </string>
    <string name="lbl_list_item_product_name">Name : </string>
    <string name="lbl_list_item_product_description">Description : </string>
    <string name="lbl_list_item_product_stock">Stock : </string>
    <string name="lbl_list_item_product_minStock">Min Stock : </string>
    <string name="lbl_list_item_product_unitPrice">Unit Price : </string>
    <string name="lbl_button_loadImage">Load Image</string>
    <string name="msg_product_delete_successfully">Product has been delete successfully!</string>
    <string name="lbl_button_takePicture">Take Picture</string>
    <string name="msg_wait">Wait…</string>
    <string name="msg_product_save_successfully">Product has been save successfully!</string>
    <string name="app_products">Products</string>
</resources>
