<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:scaleType="center"
            android:src="@mipmap/ic_launcher" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:text="@string/lbl_list_item_product_code"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_produto_list_id"
                    android:text="1" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/lbl_list_item_product_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_produto_list_nome"
                    android:text="Nome" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/lbl_list_item_product_description"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_produto_list_descricao"
                    android:text="Descrição" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/lbl_list_item_produtct_stock"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_produto_list_quantidade"
                    android:text="Quantidade" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/lbl_list_item_product_minStock"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_produto_list_quantidadeMinima"
                    android:text="Quantidade minima" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/lbl_list_item_product_unitPrice"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_produto_list_valorUnitario"
                    android:text="Valor Unitário" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</LinearLayout>